<resources>
    <string name="app_name">Parking Management</string>
    <string name="login_title">Parking Management</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="account_management">Account Management</string>
    <string name="account">ACCOUNT</string>
    <string name="vehicle_in">VEHICLE IN</string>
    <string name="vehicle_out">VEHICLE OUT</string>
    <string name="report">REPORT</string>
    <string name="sign_up">SIGN UP</string>
    <string name="create_new_account_label">CREATE</string>
    <string name="account_information_label">ACCOUNT INFORMATION</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="name_label">Name</string>
    <string name="dob_label">Date of Birth</string>
    <string name="email_label">Email</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="login_hint">Wrong username/password</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">LOGOUT</string>
    <string name="repassword">Confirm Password</string>
    <string name="edit">edit</string>
    <string name="brand_hint">Brand (Toyota, Hyundai,…)</string>
    <string name="seats">Seats (4, 5, 7, …)</string>
    <string name="colors">Colors (black, white, red, …)</string>
    <string name="plate">Plate Number (30H - 12345,…)</string>
    <string name="checkin_date">Checkin date</string>
    <string name="checkin">Checkin</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="complete">Complete</string>
    <string name="checkin_complete">Checkin complete</string>
    <string name="checkout_complete">Checkout complete</string>
    <string name="checkout_date">Checkout date</string>
    <string name="back">back</string>
    <string name="checkout">Checkout</string>
    <string name="save">Save</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="create_user_error">Username is existing or Passwords mismatch</string>
    <string name="vehicle_management">VEHICLE\nMANAGEMENT</string>
    <string name="newcustomer">NEW CUSTOMER</string>
    <string name="new_label">NEW</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="edit_account">EDIT ACCOUNT</string>
    <string name="search_by_phone">Search by phone</string>
    <string name="email_not_valid">Email is not valid !</string>
    <string name="username_not_availabel">Username is not available</string>
    <string name="price">Price</string>
    <string-array name="brand_array">
        <item>Toyota</item>
        <item>Volkswagen </item>
        <item>Ford </item>
        <item>Honda </item>
        <item>Mazda</item>
        <item>Nissan</item>
        <item>Hyundai</item>
        <item>Audi</item>
        <item>Mercedes</item>
        <item>Ferrari</item>
        <item>Suzuki</item>
        <item>Bentley</item>
        <item>Roll Royce</item>
    </string-array>
    <string-array name="seat_array">
        <item>4</item>
        <item>5</item>
        <item>7</item>
        <item>12</item>
        <item>16</item>
    </string-array>
    <string-array name="color_array">
        <item>Red</item>
        <item>Black</item>
        <item>White</item>
        <item>Yellow</item>
        <item>Blue</item>
        <item>Gray</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Golden</item>
    </string-array>
</resources>

