<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.VehicleInActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_view"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/mainTitle"
        style="@style/AppTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/layoutPadding"
        android:text="@string/vehicle_in"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/contentView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/layoutPadding"
        android:alpha="0.8"
        android:background="@drawable/rounded_corner_top_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainTitle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button_area"
        app:layout_constraintTop_toTopOf="@id/contentView">

        <LinearLayout
            android:id="@+id/contentLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/suffixImageHeight"
                    android:layout_marginStart="@dimen/prefixMargin"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_star" />

                <AutoCompleteTextView
                    android:id="@+id/auto_complete_brand"
                    android:hint="@string/brand_hint"
                    style="@style/AppAutoCompleteText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/suffixImageHeight"
                    android:layout_marginStart="@dimen/prefixMargin"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_seat" />

                <AutoCompleteTextView
                    android:id="@+id/auto_complete_seat"
                    android:hint="@string/seats"
                    style="@style/AppAutoCompleteText"
                    android:maxLength="2"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/suffixImageHeight"
                    android:layout_marginStart="@dimen/prefixMargin"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_colors" />

                <AutoCompleteTextView
                    android:id="@+id/auto_complete_color"
                    android:hint="@string/colors"
                    style="@style/AppAutoCompleteText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/suffixImageHeight"
                    android:layout_marginStart="@dimen/prefixMargin"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_plate" />

                <EditText
                    android:id="@+id/text_plate"
                    android:hint="@string/plate"
                    style="@style/AppAutoCompleteText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/suffixImageHeight"
                    android:layout_marginStart="@dimen/prefixMargin"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_clock" />

                <EditText
                    android:id="@+id/text_checkin_date"
                    android:hint="@string/checkin_date"
                    android:enabled="false"
                    android:inputType="date"
                    style="@style/AppAutoCompleteText"
                    android:maxLength="10"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <ImageButton
                    android:id="@+id/button_datepicker"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/icon_datepicker"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/suffixImageHeight"
                    android:layout_marginStart="@dimen/prefixMargin"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_username" />

                <EditText
                    android:id="@+id/text_name"
                    android:hint="@string/name_label"
                    style="@style/AppAutoCompleteText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/suffixImageHeight"
                    android:layout_marginStart="@dimen/prefixMargin"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_phone" />

                <EditText
                    android:id="@+id/text_phone"
                    android:hint="@string/phone_number_label"
                    style="@style/AppAutoCompleteText"
                    android:maxLength="15"
                    android:imeOptions="actionDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/button_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/layoutPadding"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >
        <Button
            android:id="@+id/button_back"
            style="@style/AppOutlinedButton"
            android:layout_width="0dp"
            android:layout_marginEnd="@dimen/layoutMargin"
            android:text="@string/back"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_confirm"
            style="@style/AppOutlinedButton"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/layoutMargin"
            android:text="@string/confirm"/>
    </LinearLayout>


    <include
        android:id="@+id/loadingView"
        layout="@layout/loading_screen" />

</androidx.constraintlayout.widget.ConstraintLayout>