<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.ReportActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_view"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/mainTitle"
        style="@style/AppTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/layoutPadding"
        android:text="@string/report"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/contentView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/layoutPadding"
        android:alpha="0.8"
        android:background="@drawable/rounded_corner_top_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainTitle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@id/contentView"
        app:layout_constraintBottom_toTopOf="@+id/button_back">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_username_container"
            style="@style/AppOutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layoutPadding"
            android:hint="@string/search_by_phone"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_search"
                style="@style/AppEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="numberSigned" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/vehicle_check_list"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_margin="@dimen/layoutPadding"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>




    <Button
        android:id="@+id/button_back"
        style="@style/AppOutlinedButton"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/layoutMargin"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <include
        android:id="@+id/loadingView"
        layout="@layout/loading_screen" />

</androidx.constraintlayout.widget.ConstraintLayout>